prometheus/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prometheus
  namespace: k8s-home
  labels:
    app: prometheus
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus
      containers:
        - name: prometheus
          image: evns/rpi-prometheus:v2.1.0
          imagePullPolicy: IfNotPresent
          command: ["/bin/prometheus", "--config.file", "/prometheus/prometheus.yml", 
                    "--web.external-url", "https://prometheus.home.evns.io"]
          volumeMounts:
          - mountPath: "/prometheus"
            name: "config"
      volumes:
        - name: config
          configMap:
            name: prometheus-conf
