prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: k8s-home
  labels:
    app: prometheus
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: prometheus
  selector:
    app: prometheus
